--- a/variables.sh.tmpl
+++ b/variables.sh.tmpl
@@ -8,8 +8,9 @@ export mysql_root_password=""
 export db_name=""
 export mysql_user=""
 export mysql_password=""
+export email=""
 
-if [[ -z "$deployment_url" || -z "$repo_name" || -z "$git_server" || -z "$ruby_version" || -z "$mysql_root_password" || -z "$db_name" || -z "$mysql_user" || -z "$mysql_password"]]; then
+if [[ -z "$deployment_url" || -z "$repo_name" || -z "$git_server" || -z "$ruby_version" || -z "$mysql_root_password" || -z "$db_name" || -z "$mysql_user" || -z "$mysql_password" || -z "$email" ]]; then
    echo "Set all variables"
    exit 1
 fi
